@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction


class Entrega {
  -idEntrega
  -dataInicio
  -dataFim
  -pesoEntrega
}

class Encomenda {
  -idEncomenda
  -dataPedida
  -preco
  -pesoEncomenda
  -taxa
}

class EstadoEncomenda {
  -id_estado_encomenda
  -designacao
}

class Produto {
  -idProduto
  -designacao
  -peso
  -precoBase
}

class Estafeta {
  -pesoEstafeta
}


class Endereco {
  -morada
  -latitude
  -longitude
  -altitude
}

class Veiculo {
  -idVeiculo
  -descricao
  -percentagemBateria
  -pesoMaximo
  -pesoVeiculo
  -potencia
  -areaFrontal
}

class Cliente {
  -creditos
}

class Farmacia {
  -NIF
  -email
}

Encomenda "1" -- "1" EstadoEncomenda : tem >
Entrega "1" -- "*" Encomenda : possui >
Estafeta "1" -- "*" Entrega: realiza >
Cliente "1" -- "1" Endereco: tem >
Cliente "1" -- "*" Encomenda: realiza e paga >
Entrega "*" -- "1" Veiculo: realiza <
Encomenda "1" -- "*" Produto: tem >
Farmacia "1" -- "*" Estafeta: tem >
Farmacia "1" -- "1" Endereco: possui >

@enduml